--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,42 @@
   margin: 0 auto;
 }
 
+.cbtn {
+  display: inline-block;
+  padding: 15px 25px;
+  border: 1px solid var(--mc);
+  color: var(--mc);
+  font-size: 13px;
+  background: var(--lc);
+}
+
+.cbtn::after {
+  content: "\e93e";
+  font-family: xeicon;
+  display: inline-block;
+  margin: 0 0 0 10px;
+  font-size: 10px;
+  vertical-align: 1px;
+}
+
+/* 공통섹션 css */
+.csc {
+  position: relative;
+  padding: 100px 0; 
+}
+
+.csc h2 {
+  font-size: 25px;
+  font-weight: 700;
+  margin: 0 0 20px 0;
+  text-align: center;
+}
+.csc p {
+  font-size: 15px;
+  margin: 0 0 40px 0;
+  text-align: center;
+}
+
 .TopBanner {
   background: var(--mc);
   color: var(--lc);
@@ -47,7 +83,7 @@
 }
 
 .Header {
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   width: 100%;
@@ -165,7 +201,7 @@
   line-height: 1.45;
   border: 2px solid var(--mc);
   background: var(--lc);
-  color: #444444;
+  color: #444;
   padding: 20px 35px;
 }
 
@@ -224,7 +260,8 @@
 
 .MainVisual {
   position: relative;
-  padding: 155px 0 0 0;
+  transform: translateY(-100px);
+  height: calc(100vh - 255px);
   color: var(--lc);
 }
 
@@ -260,6 +297,22 @@
   transform: translate(-50%, -50%);
 }
 
+.MainVisual .tit {
+  font-size: 60px;
+  font-weight: 700;
+  margin: 0 0 30px 0;
+  text-shadow: 0 0 2px var(--dc);
+  white-space: pre;
+}
+
+.MainVisual .des {
+  font-size: 20px;
+  font-weight: 300;
+  margin: 0 0 30px 0;
+  text-shadow: 0 0 1px var(--dc);
+}
+
+
 .MainVisual .slick-track,
 .MainVisual .slick-slide {
   transition-duration: 5ms;
@@ -279,6 +332,29 @@
   transform: translate(-100%, -50%);
   margin: 0 0 0 600px;
 }
+.MainVisual .slideTab li {
+  text-align: right;
+  margin: 10px 0;
+  font-size: 0;
+}
+
+.MainVisual .slideTab li.on {
+  font-size: 15px;
+}
+
+.MainVisual .slideTab li::after {
+  content: "";
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border: 1px solid var(--lc);
+  margin: 0 0 0 15px;
+  vertical-align: middle;
+}
+
+.MainVisual .slideTab li.on::after {
+  background: var(--lc);
+}
 
 .MainVisual .slideArrows button {
   position: absolute;
@@ -295,9 +371,145 @@
 }
 
 .MainVisual .slideArrows button:first-child {
-  margin: 0 0 0 -700px;
+  margin: 0 0 0 -800px;
 }
 
 .MainVisual .slideArrows button:last-child {
-  margin: 0 0 0 700px;
+  margin: 0 0 0 800px;
+}
+
+
+/* MainContent */
+.MainContent .inner {
+  display: flex;
+}
+
+.MainContent figure {
+  flex: 1;
+  text-align: center;
+}
+
+.MainContent figure img {
+  transition: 0.5s;
+}
+
+.MainContent figure:hover img {
+  transform: scale(1.2);
+}
+
+.MainContent .box {
+  margin:  0 0 40px 0;
+  overflow: hidden;
+}
+
+.MainContent .tit {
+  position: relative;
+  font-size: 21px;
+  font-weight: 500;
+  margin: 0 0 20px 0;
+  text-shadow: var(--dc);
+}
+
+.MainContent .tit::after {
+  content: "";
+  position: absolute;
+  top: -40px;
+  left: calc(50% - 1px);
+  width: 2px;
+  height: 40px;
+  background: var(--mc);
+}
+.MainContent .dec {
+  display: inline-block;
+  font-size: 15px;
+  margin: 0 0 30px 0;
+  line-height: 1.45;
+  width: 70%;
+  min-height: 50px;
+  word-break: keep-all;
+  /* white-space: pre-line; */
+}
+
+
+/* Portfolio */
+.Portfolio {
+  background: url(../public/assets/img/section1_bg.jpg) repeat-x;
+}
+
+.Portfolio h2 {
+  padding: 40px 0 0 0;
+  color: var(--lc);
+  text-align: left;
+}
+
+.Portfolio p {
+  color: var(--lc);
+  text-align: left;
+}
+
+.Portfolio .arrows {
+  display: inline-block;
+  align-self: flex-start;
+  border: 1px solid var(--lc);
+  color: var(--lc);
+  font-size: 0;
+}
+
+.Portfolio .arrows i {
+  padding: 10px;
+  font-size: 30px;
+}
+
+.Portfolio .arrows i~i {
+  border-left: 1px solid var(--lc);
+}
+
+.Portfolio .container {
+  display: flex;
+  width: calc(1200px + (100% - 1200px)/2);
+  margin: 0 0 0 auto;
+}
+
+.Portfolio .container>div {
+  min-width: 0;
+}
+
+.Portfolio .container .left {
+  width: 450px;
+}
+
+.Portfolio .container .right {
+  flex:1;
+}
+
+.Portfolio .right_slide figure {
+  padding: 0 20px 0 0;
+}
+
+.Portfolio .right {
+display: flex;
+flex-direction: column;
+}
+
+.Portfolio .right .slide{
+  overflow: hidden;
+  margin: auto 0 0 0;
+}
+
+.Portfolio .right_slide {
+width: 1300px;
+}
+
+.Portfolio .box {
+  margin: 0 0 30px 0;
+}
+
+.Portfolio .des {
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.Portfolio .left .box {
+  width: 400px;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
 }
